Bug 695643 - Page missing with xpswrite device
Summary: Page missing with xpswrite device
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: XPS writer (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-27 09:02 UTC by Marcos H. Woehrmann
Modified: 2023-05-19 10:56 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2014-10-27 09:02:27 UTC
The following command generates an xps file that both GhostXPS and XPS Viewer in Windows 7 render with two pages, but converting the file directly to raster with Ghostscript or opening it in Acrobat produces three pages:

  bin/gs -sDEVICE=xpswrite -o test.xps ./fts_06_0608.pdf
Comment 1 Marcos H. Woehrmann 2014-10-27 13:14:10 UTC
This issue also occurs with IA3Z1869.pdf, where page 2 is missing in the generated xps file.
Comment 2 Ken Sharp 2023-05-19 10:56:27 UTC
Fixed in commit 38cb8bb5d8b71a9c8abc68641e21cc37135f161d